--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+/*--purple: hsla(278, 100%, 72%, 1);
+--french-violet: hsla(263, 75%, 76%, 1);
+--slate-blue: hsla(239, 54%, 81%, 1);
+--tufts-blue: hsla(213, 62%, 85%, 1);
+--blue-jeans: hsla(203, 65%, 87%, 1);
+--vivid-sky-blue: hsla(194, 68%, 89%, 1);
+--sky-blue-crayola: hsla(188, 62%, 88%, 1);
+--medium-turquoise: hsla(180, 55%, 87%, 1);
+--turquoise: hsla(171, 52%, 94%, 1);
+--aquamarine: hsla(163, 50%, 100%, 1);*/
+
 body {
   margin: 0;
-  padding-top: 8vh;
+  padding-top: 9vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,7 +19,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-
+::placeholder {
+  color: #282c3f;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
