--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  font-size: 15px;
+  font-weight: 300;
 }
 ::placeholder {
   color: #282c3f;
