--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,1 +1,21 @@
+body {
+	margin: 0;
+	padding-top: 9vh;
+	font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	box-sizing: border-box;
+	font-size: 15px;
+	font-weight: 300;
+}
+::placeholder {
+	color: #282c3f;
+}
+code {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+a {
+	text-decoration: none;
+}
+
 @import '~bootstrap/scss/bootstrap.scss';
