--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	padding-top: 9vh;
+	/*padding-top: 9vh;*/
 	font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
