--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,3 +1,4 @@
+//!importing font
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 
 body {
@@ -19,5 +20,5 @@ code {
 a {
 	text-decoration: none;
 }
-
+//!importing bootstrap
 @import '~bootstrap/scss/bootstrap.scss';
