--- a/src/custom.scss
+++ b/src/custom.scss
@@ -7,6 +7,7 @@ Link {
 body {
   margin: 0;
   /*padding-top: 9vh;*/
+  //min-height: 300vh;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,5 +25,12 @@ a {
   text-decoration: none;
 }
 
+
+
 //!importing bootstrap
 @import '~bootstrap/scss/bootstrap.scss';
+.hoveroncategory {
+	transition: all 0.3s ease;
+  &:hover{
+    background: rgba(200,200,200,0.2);}
+  }
