--- a/src/custom.scss
+++ b/src/custom.scss
@@ -6,8 +6,7 @@ Link {
 }
 body {
   margin: 0;
-  /*padding-top: 9vh;*/
-  //min-height: 300vh;
+  min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
