--- a/src/custom.scss
+++ b/src/custom.scss
@@ -33,3 +33,11 @@ a {
   &:hover{
     background: rgba(200,200,200,0.2);}
   }
+.deschhjb{
+  transition: 0.2s ;
+  &:hover{
+    color: #ec436f !important;
+    font-weight: bold !important ;
+    
+  }
+}
