--- a/src/custom.scss
+++ b/src/custom.scss
@@ -7,7 +7,7 @@ Link {
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -25,7 +25,17 @@ a {
 }
 
 //!importing bootstrap
+
+$theme-colors: (
+  "primary": #ec436f,
+  "danger": #ec436f,
+  "light": #f5f5f6,
+);
+
 @import '~bootstrap/scss/bootstrap.scss';
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
 .hoveroncategory {
   transition: all 0.3s ease;
   &:hover {
