--- a/src/custom.scss
+++ b/src/custom.scss
@@ -39,5 +39,8 @@ $theme-colors: (
   &:hover {
     color: #ec436f !important;
     font-weight: bold !important ;
+    background: #f5f5f6 !important;
+    outline: none;
+    border: none;
   }
 }
