--- a/src/custom.scss
+++ b/src/custom.scss
@@ -34,13 +34,13 @@ $theme-colors: (
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
 
-.deschhjb {
-  transition: 0.1s ease-out;
-  &:hover {
-    color: #ec436f !important;
-    font-weight: bold !important ;
-    background: #f5f5f6 !important;
-    outline: none;
-    border: none;
-  }
-}
+// .deschhjb {
+//   transition: 0.1s ease-out;
+//   &:hover {
+//     color: #ec436f !important;
+//     font-weight: bold !important ;
+//     background: #f5f5f6 !important;
+//     outline: none;
+//     border: none;
+//   }
+// }
