--- a/src/custom.scss
+++ b/src/custom.scss
@@ -7,7 +7,7 @@ Link {
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Poppins', sans-serif !important;
+ font-family: 'Gilroy', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -34,13 +34,15 @@ $theme-colors: (
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
 
-// .deschhjb {
-//   transition: 0.1s ease-out;
-//   &:hover {
-//     color: #ec436f !important;
-//     font-weight: bold !important ;
-//     background: #f5f5f6 !important;
-//     outline: none;
-//     border: none;
-//   }
-// }
+.deschhjb {
+  transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  background-color: transparent;
+  &:hover {
+    color: #ec436f !important;
+    font-weight: bold !important ;
+    background: transparent;
+    outline: none;
+    border: none;
+  }
+}
+
