--- a/src/Components/Products/Productpage.module.css
+++ b/src/Components/Products/Productpage.module.css
@@ -118,6 +118,7 @@
     display: flex;
   }
   .buttonWrapper {
+    background-color: white;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
     position: fixed;
     bottom: 0;
