button styles fixed

--- a/src/Components/Products/Productpage.module.css
+++ b/src/Components/Products/Productpage.module.css
@@ -65,7 +65,7 @@
     font-weight: 800;
   }
 
-  .addToWishList {
+  .addToWishlist {
     width: 40%;
     margin: 8px;
     font-weight: 800;
@@ -132,7 +132,7 @@
     font-size: 18px;
   }
 
-  .addToWishList {
+  .addToWishlist {
     height: 57px;
     width: 40%;
     margin: auto;
