--- a/src/Components/Products/Productpage.module.css
+++ b/src/Components/Products/Productpage.module.css
@@ -74,6 +74,16 @@
   .buttonWrapper {
     margin-top: 4vh;
   }
+
+  .closed {
+    font-weight: 620;
+    color: grey;
+    background-color: #f5f5f6;
+    width: fit-content;
+    margin: 6px 12px;
+    border: none;
+    padding: 6px 26px;
+  }
 }
 
 .navbar {
@@ -114,6 +124,15 @@
   .imgbox {
     margin: auto;
     width: 100%;
+  }
+
+  .closed {
+    width: 60%;
+    height: 57px;
+    font-weight: 800;
+    font-size: 18px;
+    color: grey;
+    background-color: #f5f5f6;
   }
 
   .buttonContainer {
